test/invalid-syntax/57551_record_missing_comma/record_missing_comma.mag
-- Author: 57551, Eduardo Proença

-- Record is missing a `,` between fields

fun main (_) : Unit -> Unit =
    var r : {x: Int, y: Int} = {x = 1 y = 2};
    print(r.x)